   equivalent to providing an array with one member (use it to save on arrays)
 - MarkerAdd{Point,Line} now have an extra optional argument (after localOnly: 6th for point, 8th for line):
   the playerID of the player who should appear as the author of the drawing (if missing, defaults to the local player).
   Only has an effect when localOnly is true.


AI:
 - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - remove LuaShaders config-setting
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)
 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.
 - IME editing support for those with the proper SDL2 version/IME tool combination

Fixes:
 - fix #5803 (move goals cancelled when issued onto blocked terrain)
 - fix Spring.{G,S}etConfigFloat not being callable
 - fix Spring.GetPlayerRoster sometimes excluding active players



-- 104.0 --------------------------------------------------------
Major:
 - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload
   this environment receives the Draw{Genesis,Screen,ScreenPost} callins as well as
   a special AllowDraw FPS limiter which enables these if true is returned from it
   (otherwise they are called once every 30 seconds)