@@ -50,7 +50,8 @@ Lua:
  - MarkerAdd{Point,Line} now have an extra optional argument (after localOnly: 6th for point, 8th for line):
    the playerID of the player who should appear as the author of the drawing (if missing, defaults to the local player).
    Only has an effect when localOnly is true.
-
+ - add `paralyze.paralyzeDeclineRate` to modinfo, controls how many seconds it takes for EMP to decline by 100%%
+ - expose `Game.paralyzeDeclineRate` and `Game.paralyzeOnMaxHealth`
 
 AI:
  - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
